--- a/src/assets/MyStyle.css
+++ b/src/assets/MyStyle.css
@@ -8,3 +8,105 @@ h1{
 
 }
 
+.responsiveImg{
+    width:60%; 
+    height: auto; 
+    background-repeat: no-repeat; 
+    background-image: url(./public/supermercato-spesa.jpg);
+    background-size: cover; /* Ensure the image covers the container */
+    background-position: center; /* Center the image */
+}
+
+.card{
+    width: 70%;
+    display: flex;
+    overflow: hidden;
+}
+.justPhones{
+    color: transparent;
+}
+
+@media (max-width: 1024px) {
+
+    .justPhones{
+        color: transparent;
+    }
+    .card {
+      flex-direction: column; /* Stack elements vertically on smaller screens */
+      width: 70%;
+    }
+
+    .responsiveImg {
+        width: 100%;
+        height: 200px; /* Adjust the height as needed */
+      }
+    
+      .card-body {
+        width: 100%;
+      }
+
+}
+
+@media (max-width: 768px) {
+    .responsiveImg {
+        display: none;
+    }
+
+    .justPhones{
+        color: rgb(175, 70, 112);
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .card {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(./public/supermercato-spesa.jpg);
+        background-size: cover;
+        background-position: center;
+        padding: 16px; /* Add padding to avoid text touching the edges */
+      }
+
+      .card-body {        
+        color: transparent /* Set text color to white for better readability */
+      }
+      .card-body p {
+        white-space: normal; /* Ensure text wraps within the container */
+      }        
+  }
+  
+  
+
+  @media (max-width: 480px) {
+
+    .justPhones{
+        color: rgb(175, 70, 112);
+        text-align: center;
+        margin-bottom: 30px;
+       
+    }
+    .responsiveImg {
+      display: none;
+    }
+  
+    .card {
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(./public/supermercato-spesa.jpg);
+      background-size: cover;
+      background-position: center;
+      padding: 16px; /* Add padding to avoid text touching the edges */
+    }
+  
+    .card-body {        
+      /* width: 100%;
+      padding: 16px;
+      text-align: center; Center align the text */
+      color: transparent /* Set text color to white for better readability */
+    }
+  
+    .card-body p {
+      white-space: normal; /* Ensure text wraps within the container */
+    }
+  }
